--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,14 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: franga1
 
 development:
   <<: *default
-  database: lab1_development
+  database: lab3_development
+  username: postgres
+  password: franga1
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +61,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: lab1_test
+  database: lab3_test
+  username: postgres
+  password: franga1
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +87,6 @@ test:
 #
 production:
   <<: *default
-  database: lab1_production
-  username: lab1
-  password: <%= ENV["LAB1_DATABASE_PASSWORD"] %>
+  database: lab3_production
+  username: postgres
+  password: franga1
